# AutoPreprep

./: .gitignore  AutoPreprocessor.ipynb  LICENSE.txt  README.md  pyproject.toml  rag_ingestion.ipynb  requirements.txt  setup.py
autopreprocessor/: __init__.py  auto_preprocessor.py
autopreprocessor/chroma_db/: chroma.sqlite3
data/: age_group.txt  confidence_level.txt  credit_rating.txt  cybersecurity_threat.txt  education.txt  experience.txt  frequency.txt  health_condition.txt  house_condition.txt  income_level.txt  insurance_plan.txt  loan_grade.txt  maturity_level.txt  pain_scale.txt  performance.txt  priority.txt  probability.txt  quality.txt  rating.txt  requirements.txt  satisfaction.txt  severity.txt  size.txt
