[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autopreprocessor"
version = "0.1.1"
description = "Automatic preprocessing for tabular datasets using heuristics and RAG-assisted encoding detection."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Saad Sayed"}
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "sentence-transformers",
    "chromadb",
    "langchain-community",
    "tqdm"
]
[project.urls]
Homepage = "https://github.com/saads4/AutoPreprep.git"
Repository = "https://github.com/saads4/AutoPreprep.git"
Issues = "https://github.com/saads4/AutoPreprep.git/issues"